$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- add scheduler ("Croen") service, contributed by Lennart Grahl
  current possible actions: reboot, reconnect WAN interface

- automatically reassign available physical network interfaces if none
  of the assigned interfaces in the configuration can be found on the system
  (i.e. for a new installation, or when moving an existing config to new
  hardware)

- use UFS1 instead of UFS2 for image (UFS2 does not give an advantage here
  and may give problems when upgrading directly from old versions)

- fix MPD error when PPTP VPN is enabled and IPv6 DNS servers are configured

- fix captive portal input/output bytes accounting when traffic shaper is on

- show current WAN IP on console

- change aiccu syslog facility to daemon instead of local7

- fix embedded platform display

- port dummynet+ipnat double processing fix from 6.4

- add ipfilter fix (from PR kern/106438) for pseudo header checksum handling on
  NICs that support hardware checksumming, but not on the pseudo header
  (e.g. Intel 82559)

- fix issue with PPPoE/PPTP assigned DNS servers on WAN (new mpd up-script argument formatting)

- update MPD to version 5 (mpd4 is no longer in FreeBSD ports)

- add missing voucher binary (for captive portal voucher support)

- update ISC-DHCP client/relay/server to 4.1 (3.1 is no longer in FreeBSD ports)

- ensure AICCU is really killed before attempting to restart it again

- start NTP client before dynamic DNS updater

- fix hard disk standby feature by replacing ataidle with atacontrol

- fix inadvertent assignment that caused new IPv4 rules not to be applied
  even though the apply button was clicked in the webGUI

- add backport of r222728 with new sysctl added to allow default route to be
  installed in route table even if ipv6 forwarding is enabled

- remove stray raflags output in webGUI
