@@ -3,6 +3,10 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- fix reconnect behaviour of the scheduler to consider that interfaces could be already down
+  add job enable/disable wlan to the scheduler
+  add possibility to undo certain jobs of the scheduler that have already been executed
+
 - add scheduler ("Croen") service, contributed by Lennart Grahl
   current possible actions: reboot, reconnect WAN interface
 
